--- a/public/style.css
+++ b/public/style.css
@@ -1093,7 +1093,7 @@
             left: 0;
             width: 100%;
             height: 4px;
-            background: linear-gradient(90deg, var(--accent-purple) 0%, var(--accent-blue) 50%, var(--primary-yellow) 100%);
+            background:#AA73E0;
             transform-origin: left;
             transform: scaleX(0);
             z-index: 1000;
